--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IFoodClone">
-        <activity android:name=".activity.HomeActivity"></activity>
+        <activity android:name=".activity.EmpresaActivity"></activity>
+        <activity android:name=".activity.HomeActivity" />
         <activity android:name=".activity.AutenticacaoActivity" />
         <activity android:name=".activity.SplachActivity">
             <intent-filter>
