--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,7 @@ dependencies {
 
     implementation 'com.miguelcatalan:materialsearchview:1.4.0'
 
+    //Circle image view
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
