--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,23 +9,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IFoodClone">
-
+        <activity android:name=".activity.CardapioActivity"
+            android:parentActivityName=".activity.HomeActivity"></activity>
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity android:name=".activity.AutenticacaoActivity"/>
-        <activity android:name=".activity.HomeActivity"/>
-        <activity android:name=".activity.EmpresaActivity"/>
-        <activity android:name=".activity.ConfiguracoesEmpresaActivity"
-            android:parentActivityName=".activity.EmpresaActivity"/>
-        <activity android:name=".activity.NovoProdutoEmpresaActivity"
-            android:parentActivityName=".activity.EmpresaActivity"/>
-        <activity android:name=".activity.ConfiguracoesUsuarioActivity"
-            android:parentActivityName=".activity.HomeActivity"/>
+        <activity android:name=".activity.AutenticacaoActivity" />
+        <activity android:name=".activity.HomeActivity" />
+        <activity android:name=".activity.EmpresaActivity" />
+        <activity
+            android:name=".activity.ConfiguracoesEmpresaActivity"
+            android:parentActivityName=".activity.EmpresaActivity" />
+        <activity
+            android:name=".activity.NovoProdutoEmpresaActivity"
+            android:parentActivityName=".activity.EmpresaActivity" />
+        <activity
+            android:name=".activity.ConfiguracoesUsuarioActivity"
+            android:parentActivityName=".activity.HomeActivity" />
     </application>
 
 </manifest>
