--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,7 @@ dependencies {
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    //Spots Dialog
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
+
 }
