--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IFoodClone">
-        <activity android:name=".activity.CardapioActivity"
-            android:parentActivityName=".activity.HomeActivity"></activity>
+        <activity android:name=".activity.PedidosActivity"></activity>
+        <activity
+            android:name=".activity.CardapioActivity"
+            android:parentActivityName=".activity.HomeActivity" />
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
